--- a/history/v1.0.md
+++ b/history/v1.0.md
@@ -1,7 +1,7 @@
 ---
-icon: home
-label: Home
-order: 10000
+label: v1.0
+icon: square
+order: 100
 ---
 # Web Markdown エディター
 これは左に書くと右に反映されるマークダウンエディターです。
